--- a/source/App.css
+++ b/source/App.css
@@ -17,3 +17,7 @@ body {
 .image {
 	margin-left:auto; margin-right:auto; width: auto; height:400px; padding: 30px;
 }
+
+.hidden {
+	display: none;
+}
