--- a/source/App.css
+++ b/source/App.css
@@ -1,23 +1,36 @@
-.nice-padding {
-	padding: 15px;
-}
-
 body {
-	padding:0px; margin:0px;
-}
-
-.toolbar {
-	margin-bottom: 10px;
+	padding:0px;
+	margin:0px;
 }
 
 .carousel {
-	height:150px; float:left; width:100%;
+	height:150px;
+	float:left;
+	width:100%;
+}
+
+#app_imageContainer {
+	width: 100%;
+	height: 100%
 }
 
 .image {
-	margin-left:auto; margin-right:auto; width: auto; height:400px; padding: 30px;
+	display: block;
+	margin-left:auto;
+	margin-right:auto;
+	max-width: 75%;
+	max-height:55%;
+	padding: 30px;
 }
 
 .hidden {
 	display: none;
+}
+
+.black-background {
+	background: #000;
+}
+
+.grey-texture-background {
+	background: url('http://enyojs.com/sampler/assets/bg.png');
 }
